--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,197 @@
 @import 'global';
 
 
+.header{
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 65px 0;
+  }
+}
+.menu{
+  &__list{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item + .menu__item{
+    margin-left: 30px;
+  }
+  &__link{
+    @extend %rubik-400;
+    font-size: 15px;
+    line-height: 12px;
+    color: #436372;
+  }
+}
+.user-nav{
+  display: flex;
+  &__img{
+    display: inline-block;
+  }
+
+  &__btn{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #edf1f4;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+    padding-top: 5px;
+    }
+    &__link-box{
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-end;
+      width: 175px;
+      height: 50px;
+      background-color: #fcd7b6;
+      border-radius: 25px;
+      margin: 0 20px;
+    }
+    &__cart,
+    &__like{
+      position: relative;
+      padding-bottom: 4px;
+    }
+    &__like::after{
+      content: '';
+      position: absolute;
+      background-color: #fff;
+      width: 1px;
+      height: 30px;
+      top: -5px;
+      right: -38px;
+    }
+     &__num{
+        position: absolute;
+        padding-left: 4px;
+        font-size: 10px;
+        line-height: 20px;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: #fff;
+        top: -6px;
+        right: -8px;
+      }
+      &__button{
+        display: inline-block;
+        border: none;
+        outline: 0;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #a3bbc8;
+        font-size: 10px;
+        line-height: 8px;
+        padding-left: 7px;
+      }
+  }
+
+.footer{
+  padding-top: 60px;
+  background-color: #fff;
+  &__top{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 75px;
+    border-bottom: 1px solid #dae4e9;
+  }
+  &__item{
+    display: flex;
+    flex-direction: column;
+  }
+  &__logo{
+    margin-bottom: 35px;
+    margin-top: -13px;
+  }
+  &__adress{
+    span{
+      display: block;
+      font-size: 14px;
+      line-height: 24px;
+    }
+  }
+  &__tel{
+    margin-top: 22px;
+    display: block;
+  }
+  
+  &__title{
+    margin-bottom: 25px;
+    @extend %dmsans-700;
+    line-height: 21px;
+    color: #1f2044;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  &__link{
+    margin-bottom: 1px;
+  }
+  &__text{
+    max-width: 272px;
+    width: 100%;
+    margin-bottom: 35px;
+  }
+  &__form{
+    max-width: 300px;
+    width: 100%;
+  }
+  &__input{
+    width: 170px;
+    height: 38px;
+    padding: 12px 3px 12px 12px;
+    background-color: #fef7f0;
+    outline: 0;
+    border: none;
+    @extend %dmsans-400;
+    font-size: 12px;
+  }
+  .footer__input::placeholder{
+    color: #234969;
+    padding: 12px 3px 12px 12px;
+  }
+  &__btn{
+    @extend %btn;
+  }
+  &__bottom{
+    display: flex;
+    justify-content: space-between;
+    
+    padding: 35px 0 35px;
+  }
+  &__page + .footer__page{
+    margin-left: 30px;
+  }
+   &__page{
+    font-size: 12px;
+    position: relative;
+  }
+  .footer__page--before::before{
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 17px;
+    left: -19px;
+    top: -1px;
+    background-color: #000;
+  }
+}
+  
+
+
+
+
+
+
+
+
+
+
+
 
 
 @import 'media';
