--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,6 +28,11 @@ body{
   margin: 0 auto;
   padding: 0 15px;
 }
+.slider-wrapper{
+  max-width: 1330px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
 .title{
   @extend %dmsans-700;
