--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -66,3 +66,13 @@
        url('../fonts/DMSans-Regular.woff2') format('woff2'),
        url('../fonts/DMSans-Regular.woff') format('woff');
 }
+
+@font-face{
+  font-family: 'MyriadPro';
+  font-weight: 400;
+  font-style: normal;
+
+  src: local('MyriadPro'),
+       url('../fonts/MyriadPro.woff2') format('woff2'),
+       url('../fonts/MyriadPro.woff') format('woff');
+}
