--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -32,8 +32,17 @@ $bg: #fcd7b6;
   font-weight: 400;
 }
 
+%myriad-400{
+  font-family: 'MyriadPro', sans-serif;
+  font-weight: 400;
+}
+
 %vbtn{
-  padding: 20px 80px 20px 20px;
+  display: inline-flex;
+  padding-left: 20px;
+  width: 180px;
+  min-height: 60px;
+  align-items: center;
   @extend %rubik-500;
   color: $accent;
   background-color: #feefe2;
