--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -252,6 +252,7 @@
         border-radius: 50%;
         border: none;
         outline: 0;
+        cursor: pointer;
       }
        &.slick-active{
         button{
@@ -263,7 +264,343 @@
     }
   }
 }
+
+.conditions{
+  padding: 50px 0 110px;
+  &__items{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  &__item{
+    position: relative;
+  }
+  &__svg{
+    position: absolute;
+    left: -75px;
+    top: 6px;
+  }
+}
+
+.product{
+  padding-bottom: 110px;
+  &__title{
+    margin-bottom: 35px;
+  }
+  &__categories{
+    margin-bottom: 80px;
+  }
   
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px 30px;
+    max-width: 1170px;
+    width: 100%;
+    margin: 0 auto 80px;
+  }
+
+  &__item{
+    padding-top: 25px;
+    max-width: 270px;
+    min-height: 380px;
+    box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+    &:hover{
+      .product__link-box{
+        transform: translateY(-250%);
+      }
+    }
+  }
+  &__img-box{
+    overflow: hidden;
+    position: relative;
+  }
+  &__image{
+    text-align: center;
+    margin: 0 auto 70px;
+  }
+  &__link-box{
+    display: flex;
+    justify-content: center;
+    transform: translateY(300%);
+    transition: transform 0.5s ease;
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+  &__link + .product__link{
+    margin-left: 15px;
+  }
+  &__link{
+    width: 45px;
+    height: 45px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: relative;
+    box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+    transition: background-color 0.5s ease;
+  }
+   &__link:hover{
+     background-color: #a3bbc8;
+      path{
+        fill: #fff;
+      }
+    }
+  &__svg{
+    position: absolute;
+    left: 13px;
+    top: 13px;
+  }
+
+  &__wrapper-box{
+    text-align: center;
+    z-index: 2;
+  }
+
+  &__extra-items{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__extra-item{
+    display: flex;
+  }
+
+  &__extra-img{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    min-height: 53vh;
+    width: 870px;
+    position: relative;
+  }
+  &__extra-content{
+    position: absolute;
+    right: 150px;
+    top: 200px;
+  }
+  &__extra-title{
+    margin-bottom: 25px;
+    @extend %dmsans-700;
+    font-size: 26px;
+    line-height: 32px;
+    color: #243f4d;
+  }
+  &__extra-text{
+    margin-bottom: 35px;
+    max-width: 330px;
+    color: #243f4d;
+  }
+  &__extra-link{
+    @extend %vbtn;
+    color: #436372;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      right: 20px;
+      top: 25px;
+      background-image: url('../images/icons/arrow-blue.svg');
+      width: 22px;
+      height: 9px;
+    }
+  }
+
+}
+.categories{
+  display: flex;
+  justify-content: center;
+}
+
+
+.design{
+  padding-bottom: 110px;
+  &__title{
+    margin-bottom: 30px;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 34px 30px;
+    margin: 0 auto;
+    max-width: 1170px;
+    padding-bottom: 120px;
+  }
+  &__item{
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 370px;
+    height: 245px;
+    background-color: #f8f8f8;
+  }
+  &__info{
+    padding-left: 37px;
+  }
+  &__item-title,
+  &__subtitle{
+    @extend %dmsans-700;
+    font-size: 20px;
+    color: #191919;
+  }
+  &__subtitle{
+    padding-bottom: 20px;
+  }
+  &__link{
+    @extend %dmsans-700;
+    font-size: 16px;
+    color: #a3bbc8;
+  }
+  &__video-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    min-height: 50vh;
+  }
+}
+
+.design__btn,
+.product__btn{
+  @extend %dmsans-700;
+  color: #7b7b7b;
+  background-color: #fff;
+  border: none;
+  outline: 0;
+  cursor: pointer; 
+}
+.design__btn + .design__btn,
+.product__btn + .product__btn{
+  margin-left: 30px;
+}
+
+.mixitup-control-active{
+  color: #191919;
+}
+
+.articles{
+  background-color: #fff;
+  &__top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+  &__top-link{
+    position: relative;
+    @extend %dmsans-700;
+    color: #262626;
+    &::after{
+      content: '';
+      position: absolute;
+      background-image: url('../images/icons/arrow-link.svg');
+      width: 6px;
+      height: 11px;
+      top: 11px;
+      right: -25px;
+    }
+  }
+  &__items{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item{
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
+    width: 370px;
+    min-height: 420px;
+    border-radius: 5px;
+    box-shadow: 0px 6px  47px 3px rgba(37, 37, 37, 0.05);
+}
+ &__item:not(:first-child){
+   margin-left: 30px;
+ }
+ &__img-box{
+   position: relative;
+ }
+ &__image{
+   max-width: 370px;
+   width: 100%;
+   height: 250px;
+ }
+ &__btn{
+   position: absolute;
+   padding: 3px 30px;
+   @extend %dmsans-700;
+   font-size: 14px;
+   line-height: 20px;
+   text-transform: uppercase;
+   color: #fff;
+   background-color: #a3bbc8;
+   border-radius: 22px;
+   bottom: -13px;
+   left: 25px;
+ }
+ &__text {
+   margin-top: 30px;
+   padding-left: 30px;
+   padding-bottom: 17px;
+   max-width: 315px;
+   width: 100%;
+   @extend %dmsans-500;
+   font-size: 18px;
+   color: #262626;
+ }
+ &__box{
+   padding: 22px 0 28px 45px;
+   display: flex;
+   align-items: center;
+   position: relative;
+ }
+ &__box::before{
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 15px;
+   height: 1px;
+   width: 315px;
+   background-color: #e0e0e0;
+ }
+ &__link{
+   position: relative;
+   @extend %myriad-400;
+   font-size: 16px;
+   line-height: 30px;
+   color: #222933;
+ }
+ &__link::before{
+   content: '';
+   position: absolute;
+   background-image: url('../images/icons/icon.svg');
+   left: -11px;
+   top: 0;
+ }
+ &__link:not(:first-child){
+   margin-left: 45px;
+ }
+}
+
+.partners{
+  padding: 75px 0 80px;
+  background-color: #fef7f0;
+  &__inner{
+    margin-top: -292px;
+    padding-top: 260px;
+    background-color: #fef7f0;
+  }
+  &__items{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+  }
+  &__item:not(:first-child){
+    margin-left: 95px;
+  }
+}
+
+
 
 
 
