--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -54,3 +54,40 @@ a{
   line-height: 32px;
   color: #7b7b7b;
 }
+
+.top{
+  max-width: 1920px;
+  width: 100%;
+  padding: 35px 35px;
+  background-color: #edf1f4;
+}
+.breadcrumbs{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  &__list{
+    display: flex;
+  }
+  &__item{
+    position: relative;
+    padding-right: 20px;
+    &::after{
+      content: '/';
+      position: absolute;
+      width: 9px;
+      height: 10px;
+      right: 5px;
+      top: 2px;
+    }
+    &:last-child{
+      color: $accent;
+      padding-right: 0;
+      &::after{
+        display: none;
+      }
+    }
+  }
+  &__link{
+    line-height: 24px;
+  }
+}
