--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -603,6 +603,22 @@
   }
 }
 
+
+.top{
+  text-align: center;
+  max-width: 1920px;
+  width: 100%;
+  padding: 35px 35px;
+  background-color: #edf1f4;
+  &__title{
+    margin-bottom: 18px;
+    @extend %rubik-300;
+    font-size: 36px;
+    line-height: 34px;
+    color: #222933;
+  }
+}
+
 .modal{
   max-width: 470px;
   margin: 0 auto 120px;
@@ -676,6 +692,28 @@
    }
 }
 
+.terms{
+  padding: 120px 0 120px;
+  &__item{
+    padding-bottom: 50px;
+  }
+  &__title{
+    margin-bottom: 30px;
+    @extend %rubik-500;
+    font-size: 24px;
+    line-height: 40px;
+    color: #243f4d;    
+  }
+  &__point{
+    color: #243f4d;
+    &:not(:last-child){
+      padding-bottom: 25px;
+    }
+  }
+  &__text{
+    padding-bottom: 25px;
+  }
+}
 
 
 
