--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -715,6 +715,206 @@
   }
 }
 
+.about{
+  padding: 120px 0;
+  &__wrapper{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 120px;
+  }
+  &__img{
+    width: 570px;
+    height: 676px;
+    object-fit: cover;
+    margin-right: 50px;
+  }
+  &__top{
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+  &__number{
+    margin-right: 32px;
+    @extend %rubik-700;
+    font-size: 140px;
+    line-height: 32px;
+    color: #a3bbc8;
+  }
+  &__item{
+    color: #243f4d;
+    margin-bottom: 2px;
+  }
+  &__description{
+    padding-bottom: 43px;
+  }
+  &__title{
+    text-align: left;
+    line-height: 32px;
+    color: #243f4d;
+    margin-bottom: 50px;
+  }  
+  &__text{
+    padding-bottom: 23px;
+  }
+  &__preferences{
+    display: flex;
+    justify-content: space-around;
+  }
+  &__point{
+    span{
+      display: block;
+    }
+  }
+  &__preferences{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 40px;
+    border-top: 2px solid #ebeef3;
+  }
+  &__point{
+    @extend %dmsans-700;
+    font-size: 36px;
+    line-height: 38px;
+    color: #243f4d;
+    position: relative;
+    span{
+      padding-top: 8px;
+      font-size: 16px;
+      line-height: 17px;
+      color: #4c4c4c;    
+    }
+  }
+  &__point::before{
+    content: '';
+    position: absolute;
+    left: -55px;
+    top: 10px;
+    background-image: url('../images/icons/microfon.svg');
+    width: 43px;
+    height: 39px;
+  }
+}
+.statistics{
+  padding: 80px 0;
+  background-color: #fcd7b6;
+  &__items{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+  }
+  &__item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    @extend %dmsans-700;
+    font-size: 36px;
+    line-height: 32px;
+    color: #243f4d;
+    span{
+      margin-top: 15px;
+      font-size: 18px;
+    }
+  }
+  &__image{
+    transform: translateX(-10px);
+    width: 64px;
+    height: 57px;
+    margin-bottom: 15px;
+  }
+  &__item:not(:first-child){
+    margin-left: 120px;   
+  }
+}
+
+.team{
+  padding: 120px 0 115px;
+  &__description{
+    max-width: 300px;
+    width: 100%;
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__title{
+    margin-bottom: 35px;
+    text-align: left;
+  }
+  &__text{
+    margin-bottom: 40px;
+  }
+  &__btn{
+    @extend %vbtn;
+    font-size: 15px;
+    line-height: 55px;
+    color: #fff;
+    background-color: #a3bbc8;
+    padding: 2px 0 2px 17px;
+    position: relative;
+    border: none;
+  }
+  &__btn::after{
+    content: '';
+    position: absolute;
+    right: 20px;
+    top: 26px;
+    color: #fff;
+    background-image: url('../images/icons/arrow.svg');
+    width: 22px;
+    height: 9px;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 770px;
+    grid-gap: 39px 30px;
+  }
+  &__img{
+    position: relative;
+    z-index: -1;
+    background-color: #fff;
+    object-fit: cover;
+  }
+  &__box{
+    display: flex;justify-content: space-around;
+    align-items: center;
+    margin-top: -50px;
+    max-width: 324px;
+    width: 100%;
+    height: 110px;
+    background-color: #fff;
+    z-index: 2;
+  }
+  &__name{
+    @extend %dmsans-700;
+    font-size: 22px;
+    line-height: 26px;
+    color: #436372;
+    margin-bottom: 3px;
+  }
+  &__position{
+    color: #565872;
+  }
+  &__link{
+    position: relative;
+    z-index: 2;
+  }
+  &__link::after{
+    content: '';
+    z-index: -1;
+    position: absolute;
+    top: -11px;
+    left: -12px;
+    width: 41px;
+    height: 41px;
+    border-radius: 50%;
+    background-color: #f6f6f6;
+  }
+}
+
 
 
 
