--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -915,10 +915,418 @@
   }
 }
 
+.contact{
+  padding: 120px 0 130px;
+  &__top{
+    margin-bottom: 120px;
+  }
+  &__subtitle{
+    margin-bottom: 20px;
+    @extend %dmsans-700;
+    line-height: 20px;
+    color: #a3bbc8;
+    text-align: center;
+  }
+  &__title{
+    margin-bottom: 75px;
+    color: #436372;
+  }
+  &__items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__item{
+    text-align: center;
+    max-width: 370px;
+    width: 100%;
+    min-height: 382px;
+    padding-top: 80px;
+  }
+  &__item--active{
+    border: 3px solid #000;
+    .contact__svg{
+      width: 80px;
+      height: 80px;
+      background-color:#a3bbc8;
+      border-radius: 20px;
+      padding-top: 20px;
+      padding-left: 21px;
+      path{
+        fill: #fff;
+      }
+    }
+    }
+  &__svg{
+    margin-bottom: 80px;
+    width: 80px;
+    height: 80px;
+    background-color:#fff;
+    border-radius: 20px;
+    padding-top: 20px;
+    padding-left: 21px;
+   path{
+     fill: #a6bdca;
+   }
+  }
+  &__email-title{
+    margin-bottom: 28px;
+    @extend %dmsans-700;
+    font-size: 20px;
+    line-height: 26px;
+    color: #222222;
+  }
+  &__email-link{
+    margin-bottom: 18px;
+    display: block;
+    font-size: 16px;
+    line-height: 30px;
+    color: #565872;
+  }
+
+  &__bottom{
+    display: flex;
+    justify-content: center;
+  }
+  &__form{
+    margin-right: 70px;
+  }
+
+  &__name,
+  &__mail{
+    width: 300px;
+    min-height: 50px;
+    border: none;
+    outline: 0;
+    padding: 18px 40px 18px 5px;
+    margin-bottom: 25px;
+    background-color: #fafafa;
+    cursor: pointer;
+    &::placeholder{
+      text-transform: uppercase;
+      padding: 18px 0 18px 22px;
+      color: #565872;
+    }
+  }
+  &__textarea{
+    display: block;
+    padding: 18px 40px 18px 5px;
+    width: 625px;
+    min-height: 175px;
+    border: none;
+    resize: none;
+    outline: 0;
+    background-color: #fafafa;
+    margin-bottom: 18px;
+    cursor: pointer;
+    &::placeholder{
+      text-transform: uppercase;
+      padding: 16px 0 18px 22px;
+      color: #565872;
+    }
+  }
+  &__name{
+    background-image: url('../images/icons/user.svg');
+    background-repeat: no-repeat;
+    background-position: 263px 20px;
+    margin-right: 20px;
+  }
+  &__mail{
+    background-image: url('../images/icons/mail.svg');
+    background-repeat: no-repeat;
+    background-position: 263px 20px;
+  }
+  &__textarea{
+    background-image: url('../images/icons/message.svg');
+    background-repeat: no-repeat;
+    background-position: 588px 20px;
+  }
+  &__button{
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    @extend %rubik-400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #fff;
+    background-color: #a3bbc8;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+  }
+
+}
+
+#map{
+  width: 500px;
+  min-height: 336px;
+}
 
 
 
+.filter{
+  width: 270px;
+  &__title{
+    margin-bottom: 28px;
+    @extend %dmsans-700;
+    font-size: 18px;
+    color: #243f4d;
+    text-transform: uppercase;
+  }
+  &__item{
+    margin-bottom: 50px;
+  }
+}
 
+.filter-category{
+  &__title{
+   position: relative;
+  }
+  &__title::after{
+    content: '';
+    position: absolute;
+    left: 110px;
+    top: 13px;
+    width: 38px;
+    height: 3px;
+    background-color: #a3bbc8;
+  }
+  &__input{
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    position: absolute;
+    &:checked + .filter-category__checkbox{
+      background-color: #a3bbc8;
+    }
+  }
+  &__checkbox{
+    position: relative;
+    margin-bottom: 10px;
+  }
+  &__checkbox::after{
+    content: '';
+    position: absolute;
+    right: 23px;
+    top: 10px;
+    width: 5px;
+    height: 10px;
+    background-image: url('../images/icons/arrow-right.svg');
+  }
+}
+.filter-price{
+  &__label{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__box{
+    margin-top: 25px;
+  }
+}
+.filter-price,
+.filter-brand{
+  &__title{
+    position: relative;
+  }
+  &__title::after{
+    content: '';
+    position: absolute;
+    left: 73px;
+    top: 13px;
+    width: 38px;
+    height: 3px;
+    background-color: #a3bbc8;
+  }
+   &__input{
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    position: absolute;
+  }
+}
+.filter-brand{
+  &__box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  &__input{
+    &:checked + .filter-brand__box{
+    background-color: #a3bbc8;
+    }
+  }
+}
+.filter-recent{
+  &__title{
+    position: relative;
+  }
+  &__title::after{
+    content: '';
+    position: absolute;
+    right: 45px;
+    top: 13px;
+    width: 38px;
+    height: 3px;
+    background-color: #a3bbc8;
+  }
+  &__item{
+    display: flex;
+    margin-bottom: 23px;
+  }
+  &__img{
+    width: 68px;
+    min-height: 68px;
+    object-fit: contain;
+    margin-right: 20px;
+    border: 3px solid #f2f2f2;
+  }
+  &__name{
+    margin-bottom: 12px;
+  }
+  &__price{
+    margin-top: 10px;
+  }
+  &__star{
+    padding: 0;
+  }
+}
+
+.product-page{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+    justify-content: space-around;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px 30px;
+  }
+  &__filters{
+    margin-right: 30px;
+  }
+  &__content{
+    max-width: 870px;
+    width: 100%;
+  }
+  &__items--list{
+    display: block;
+  }
+  &__item{
+    display: flex;
+    margin-bottom: 40px;
+  }
+  &__img{
+    margin-right: 58px;
+    width: 370px;
+    min-height: 500px;
+    border: 2px solid #f2f2f2;
+  }
+  &__name{
+    padding-top: 90px;
+    margin-bottom: 25px;
+    font-size: 40px;
+    line-height: 26.43px;
+    color: #333;
+  }
+  &__star{
+    margin-bottom: 36px;
+  }
+  &__price{
+    margin-bottom: 38px;
+    font-size: 30px;
+    line-height: 45px;
+    color: #333;
+  }
+  &__text{
+    margin-bottom: 37px;
+    color: #243f4d; 
+  }
+  &__btn{
+    width: 208px;
+    height: 50px;
+    color: #fff;
+    background-color: #a3bbc8;
+    font-size: 15px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 30px;
+  }
+  &__btn--disabled{
+    display: none;
+  }
+  &__carts{
+    display: flex;
+  }
+  &__carts--disabled{
+    display: none;
+  }
+  &__cart{
+    margin-right: 11px;
+  }
+
+   &__cart,
+   &__heart{
+    padding-left: 13px;
+    padding-top: 16px;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+   } 
+  &__cart--active,
+  &__heart--active{
+    background-color: #a3bbc8;
+    path{
+      fill: #fff;
+    }
+  }
+}
+
+
+.irs--flat .irs-line{
+  top: 13px;
+  height: 3px;
+  background-color: $accent;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle{
+  top: 7px;
+  width: 15px;
+  height: 15px;
+  background-color: $accent;
+}
+
+.irs--flat .irs-handle>i:first-child{
+  display: none;
+}
+
+.irs--flat .irs-bar{
+  top: 13px;
+  height: 4px;
+  background-color: $accent;
+}
+
+.irs-from, .irs-to, .irs-single {
+  display: none;
+  }
+
+.irs--flat .irs-min, .irs--flat .irs-max {
+  display: none;
+  }
+
+.irs--flat{
+  height: 30px;
+}
+
+
+element.style {
+  width: 80%;
+}
 
 
 
