all pages ready without adaptive

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -41,7 +41,7 @@ $bg: #fcd7b6;
   display: inline-flex;
   padding-left: 20px;
   width: 180px;
-  min-height: 60px;
+  height: 60px;
   align-items: center;
   @extend %rubik-500;
   color: $accent;
@@ -60,6 +60,20 @@ $bg: #fcd7b6;
   line-height: 21px;
   color: #fff;
   background-color: #a3bbc8;
+  border: none;
+  cursor: pointer;
+  outline: 0;
+}
+%addbtn{
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+  @extend %rubik-400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #fff;
+  background-color: #a3bbc8;
+  text-transform: uppercase;
   border: none;
   cursor: pointer;
   outline: 0;
